--- a/Web/NbuReservationSystem.Web/Content/Site.css
+++ b/Web/NbuReservationSystem.Web/Content/Site.css
@@ -160,6 +160,36 @@ header.carousel .fill {
     resize: vertical;
 }
 
+#repetition-policy {
+    cursor: pointer;
+}
+
 .day-container {
     padding: 0;
+}
+
+.field-validation-error {
+    color: #b94a48;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+input.input-validation-error,
+textarea.input-validation-error,
+select.input-validation-error {
+    border: 1px solid #b94a48;
+}
+
+input[type="checkbox"].input-validation-error {
+    border: 0 none;
+}
+
+.validation-summary-errors {
+    color: #b94a48;
+}
+
+.validation-summary-valid {
+    display: none;
 }
