--- a/Web/NbuReservationSystem.Web/Views/Reservations/_DayTab.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Reservations/_DayTab.cshtml
@@ -39,7 +39,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-7">
-                            <p>@Html.FormatEventDuration(reservation.BeginsOn, reservation.EndsOn)</p>
+                            <p>@Html.FormatEventDuration(reservation.StartHour, reservation.EndHour)</p>
                         </div>
                         <div class="col-md-21">
                             <p>@reservation.Title</p>
